--- a/SportsStore/Views/Product/List.cshtml
+++ b/SportsStore/Views/Product/List.cshtml
@@ -1,11 +1,14 @@
-﻿@model IEnumerable<Product>
+﻿@model ProductsListViewModel
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div>
         <h3>@p.Name</h3>
-        @*@p.Description*@
+        @p.Description
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+@*Adding the pagination links in the list.cstml file*@
+<div page-model="@Model.PagingInfo" page-action="List"></div>
 
