--- a/SportsStore/Views/Product/List.cshtml
+++ b/SportsStore/Views/Product/List.cshtml
@@ -15,7 +15,7 @@
 }
 
 @*Adding the pagination links in the list.cstml file*@
-<div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true" page-class="btn" page-class-normal="btn-default" page-class-selected="btn-primary" class="btn-group pull-right">
+<div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true" page-class="btn" page-class-normal="btn-default" page-class-selected="btn-primary" page-url-category="@Model.CurrentCategory" class="btn-group pull-right">
 
 </div>
 
