Added cart class and methods.

--- a/SportsStore/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/SportsStore/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -7,13 +7,14 @@
     Home
 </a>
 
-@foreach (string cateogry in Model)
+@foreach (string category in Model)
 {
-    <a class="btn btn-block btn-default"
+    <a class="btn btn-block 
+       @(category == ViewBag.SelectedCategory ? "btn-primary" : "btn-default")"
        asp-action="List"
        asp-controller="Product"
-       asp-route-category="@cateogry"
+       asp-route-category="@category"
        asp-route-page="1">
-        @cateogry
+        @category
     </a>
 }
