--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -10,6 +10,10 @@
 <body class="panel panel-default">
     <div class="panel-heading"><h4>@ViewBag.Title</h4></div>
     <div class="panel-body">
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
         @RenderBody()
     </div>
 </body>
