Added inline CSS to admin layout file for temp styling.

--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,12 @@
     <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
     @*<link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />*@
     <title>@ViewBag.Title</title>
+    <style>
+        .input-validation-error {
+            border-color: red;
+            background-color: #fee;
+        }
+    </style>
 </head>
 <body class="panel panel-default">
     <div class="panel-heading"><h4>@ViewBag.Title</h4></div>
