--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -12,6 +12,9 @@
             background-color: #fee;
         }
     </style>
+    <script asp-src-include="lib/jquery/**/jquery.min.js"></script>
+    <script asp-src-include="lib/jquery-validation/**/jquery.validate.min.js"></script>
+    <script as-src-include="lib/jquery-validation-unobtrusive/**/*.min.js"></script>
 </head>
 <body class="panel panel-default">
     <div class="panel-heading"><h4>@ViewBag.Title</h4></div>
