--- a/SportsStore/Views/Admin/Edit.cshtml
+++ b/SportsStore/Views/Admin/Edit.cshtml
@@ -25,7 +25,7 @@
     <div class="form-group">
         <label asp-for="Price"></label>
         <div><span asp-validation-for="Price" class="text-danger"></span></div>
-        <input asp-for="Category" class="form-control"/>
+        <input asp-for="Price" class="form-control"/>
     </div>
     <div class="text-center">
         <button class="btn btn-primary" type="submit">Save</button>
