Added iframe countdown timer to layout page as personal reminder and simple add on.

--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
     <link rel="stylesheet" asp-href-include="/lib/fontawesome/css/*.css" />
+
     <title>SportsStore</title>
 </head>
 <body>
@@ -22,6 +23,9 @@
         <div class="col-xs-8">
             @RenderBody()
         </div>
+    </div>
+    <div>
+        <iframe src="http://free.timeanddate.com/countdown/i5zx22kv/n2455/cf12/cm0/cu3/ct0/cs1/ca0/cr0/ss0/cac000/cpc000/pcfff/tcfff/fs100/szw320/szh135/tatTime%20left%20to%20December%20new%20moon%20in/tac000/tptTime%20since%20Event%20started%20in/tpc000/mac000/mpc000/iso2017-12-18T00:00:00/bo2/pd2" allowTransparency="true" frameborder="0" width="320" height="71"></iframe>
     </div>
 </body>
 </html>
